<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_TopHeadLines"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/TopHeadLines"
            />
        <item
            android:id="@+id/nav_Business"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/Business" />
        <item
            android:id="@+id/nav_Entertainment"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/Entertainment" />
        <item
            android:id="@+id/nav_Health"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/Health" />
        <item
            android:id="@+id/nav_Science"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/Science" />
        <item
            android:id="@+id/nav_Sport"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/Sport" />
        <item
            android:id="@+id/nav_Technology"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/Technology" />

    </group>
    <item android:title="@string/group_title">

        <group android:checkableBehavior="single">
            <menu>
                <item
                    android:id="@+id/nav_favorite"
                    android:title="@string/favoriteNews"
                    android:icon="@drawable/ic_menu_send"/>
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/action_sign_out"
                    android:icon="@drawable/ic_menu_send"/>


            </menu>
        </group>
    </item>
</menu>
